@@ -13,6 +13,7 @@ about.tab.license=License
 about.tab.sysinfo=System Information
 about.title=About
 about.version=Version\:
+battle.annihilate=Annihilate
 battle.retreat=Retreat
 battle.roll=Roll
 battle.select.attack=Select Attacking Dice
